# cmakeopts

./: CMakeLists.txt  README.md  builder.py  cmake-builder.py  library.cmake
docs/: CMakeDoxyfile.in  CMakeLists.txt
misc/: build-types.cmake  color.cmake  test.cmake
packaging/: CMakeLists.txt
packaging/deb/: CMakeLists.txt
packaging/rpm/: CMakeLists.txt
